Justify radio buttons and fix flex wrapping

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,91 @@
+:root {
+    --darkblack: #282828;
+    --blackish: #323232;
+    --lightblack: #383838;
+    --darkgray: #484848;
+    --grayish: #585858;
+    --whiteish: #dddddd;
+    --brightwhite: #ffffff;
+}
+
 body {
-    background-color: #282828;
-    color: #ffffff;
-    position: relative;
+    background-color: var(--darkblack);
+    color: var(--brightwhite);
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 60%;
 }
+
 h1 {
-    color: #ffffff;
-    text-align: center;
-}
-.question {
+    background-color: var(--blackish);
+    color: var(--brightwhite);
     padding: 1em;
     text-align: center;
-    width: 100%;
-    color: #dddddd;
+}
+
+form {
+    background-color: var(--darkblack);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.question-container {
+    border-style: solid none;
+    border-width: 1px 0;
+}
+
+.question {
+    background-color: var(--lightblack);
+    color: var(--whiteish);
+    padding: 2em;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.missing-word {
+    background-color: var(--whiteish);
+    width: 4em;
+}
+
+.fill {
+    /* background-color: var(--darkblack); */
+    padding: 2em 0 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: wrap;
+}
+
+.choice {
+    /* background-color: var(--blackish); */
+}
+
+input[type=radio] {
+    color: var(--grayish)
+}
+
+input[type=submit] {
+    background-color:var(--blackish);
+    color:var(--brightwhite);
+    border-style: solid none;
+    padding: 2em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%
+}
+input[type=submit]:hover {
+    background-color:var(--darkgray);
+}
+
+input[type=submit]:checked {
+    background-color:var(--blackish);
 }
